kubernetes/skywalker/home/home-assistant/home-assistant.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: home-assistant

spec:
  gateways:
    - istio-system/feldman-in
  hosts:
    - home-assistant.feldman.in
  http:
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: home-assistant
            port:
              number: 8123
